# Advance-programing-1-taxi-center-C-

./: README.md
ex1-BFS DFS UML/ex1/mission2/: BFS.cpp  BFS.h  Grid.h  Matrix.cpp  Matrix.h  Node.h  Point.h  main.cpp  makefile
ex1-BFS DFS UML/ex1/mission3/mission3-cpp/: Makefile  Node.cpp  Node.h  details.txt  main.cpp  statistics.txt
ex1-BFS DFS UML/ex1/mission3/mission3-java/: Tree.java  manifest.txt
ex2- TDD/ex2/: CMakeLists.txt
ex2- TDD/ex2/src/: BFS.cpp  BFS.h  CMakeLists.txt  Driver.cpp  Driver.h  Grid.h  LuxuryCab.cpp  LuxuryCab.h  Matrix.cpp  Matrix.h  NodeMatrix.cpp  NodeMatrix.h  Passanger.cpp  Passanger.h  Person.cpp  Person.h  StandartCab.cpp  StandartCab.h  Statistics.cpp  Statistics.h  TaxiCab.cpp  TaxiCab.h  TaxiCenter.cpp  TaxiCenter.h  Trip.cpp  Trip.h  main.cpp
ex2- TDD/ex2/tests/: BFSTest.cpp  BFSTest.h  CMakeLists.txt  DriverTest.cpp  DriverTest.h  GridTest.cpp  GridTest.h  LuxuryCabTest.cpp  LuxuryCabTest.h  MatrixTest.cpp  MatrixTest.h  NodeMatrixTest.cpp  NodeMatrixTest.h  NodeTest.cpp  NodeTest.h  PassangerTest.cpp  PassangerTest.h  PointTest.cpp  PointTest.h  StandartCabTest.cpp  StandartCabTest.h  StatisticsTest.cpp  StatisticsTest.h  TaxiCabTest.cpp  TaxiCabTest.h  TaxiCenterTest.cpp  TaxiCenterTest.h  TripTest.cpp  TripTest.h  gtest.cpp
ex3-Implementation/ex3/: CMakeLists.txt
ex3-Implementation/ex3/src/: BFS.cpp  BFS.h  CMakeLists.txt  Driver.cpp  Driver.h  DriverCreator.cpp  DriverCreator.h  Grid.h  LuxuryCab.cpp  LuxuryCab.h  Matrix.cpp  Matrix.h  Menu.cpp  Menu.h  NodeMatrix.cpp  Passenger.cpp  Passenger.h  Person.cpp  Person.h  Point.cpp  Ride.cpp  Ride.h  StandardCab.cpp  StandardCab.h  Statistics.h  TaxiCab.cpp  TaxiCab.h  TaxiCenter.cpp  TaxiCenter.h  TaxiCreator.cpp  TaxiCreator.h  Trip.cpp  Trip.h  TripCreator.cpp  TripCreator.h  Vehicle.cpp  Vehicle.h  main.cpp  makefile
ex3-Implementation/ex3/tests/: BFSTest.cpp  CMakeLists.txt  DriverTest.cpp  GridTest.cpp  LuxuryCabTest.cpp  MatrixTest.cpp  NodeMatrixTest.cpp  NodeTest.cpp  PassengerTest.cpp  PointTest.cpp  StandartCabTest.cpp  StatisticsTest.cpp  TaxiCabTest.cpp  TaxiCenterTest.cpp  TripTest.cpp
ex4-UDP/ex4/: log.txt  makefile
ex4-UDP/ex4/src/: Menu.cpp  Menu.h  TaxiCenter.cpp  TaxiCenter.h  Trip.cpp  Trip.h  client.cpp  server.cpp
ex4-UDP/ex4/src/cabs/: StandardCab.cpp  Vehicle.cpp
ex4-UDP/ex4/src/core/: Matrix.cpp  Matrix.h  NodeMatrix.h  Obstacle.cpp  Point.cpp  Point.h
ex4-UDP/ex4/src/creators/: DriverCreator.cpp  TripCreator.cpp  TripCreator.h
ex4-UDP/ex4/src/persons/: Driver.cpp  Passenger.cpp  Passenger.h  Person.cpp  Person.h
ex4-UDP/ex4/src/sockets/: Socket.cpp  Socket.h  Udp.cpp  Udp.h
ex5-TCP multi threads/ex5/: log.txt  makefile
ex5-TCP multi threads/ex5/src/: CMakeLists.txt  Menu.cpp  Menu.h  Ride.cpp  Ride.h  Statistics.h  TaxiCenter.cpp  TaxiCenter.h  Trip.cpp  Trip.h  client.cpp  server.cpp
ex5-TCP multi threads/ex5/src/cabs/: LuxuryCab.cpp
ex5-TCP multi threads/ex5/src/core/: Grid.h  Matrix.cpp  Matrix.h  NodeMatrix.cpp  Obstacle.h
ex5-TCP multi threads/ex5/src/creators/: DriverCreator.h  TaxiCreator.h  ThreadCreator.cpp  TripCreator.cpp  TripCreator.h
ex5-TCP multi threads/ex5/src/persons/: Driver.cpp
ex5-TCP multi threads/ex5/src/sockets/: TcpClient.h  TcpServer.cpp  TcpServer.h
ex6-Thread pool handle errors/ex6/: makefile
ex6-Thread pool handle errors/ex6/src/: CMakeLists.txt  Clock.cpp  Clock.h  InputParser.cpp  Job.cpp  Menu.cpp  Menu.h  Statistics.cpp  TaxiCenter.cpp  TaxiCenter.h  ThreadPool.cpp  ThreadPool.h  Trip.h  client.cpp  server.cpp
ex6-Thread pool handle errors/ex6/src/cabs/: TaxiCab.cpp  TaxiCab.h
ex6-Thread pool handle errors/ex6/src/core/: BFS.cpp  Matrix.h  Node.cpp  NodeMatrix.cpp  Point.cpp  Point.h
ex6-Thread pool handle errors/ex6/src/creators/: ThreadCreator.h  TripCreator.cpp  TripCreator.h
ex6-Thread pool handle errors/ex6/src/sockets/: TcpClient.cpp  TcpServer.h
ex7 -GUI/ex7/: README.txt
ex7 -GUI/ex7/cpp/: makefile
ex7 -GUI/ex7/cpp/src/: InputParser.h  Job.h  Menu.cpp  Menu.h  Ride.cpp  Serialization.h  TaxiCenter.cpp  TaxiCenter.h  Trip.cpp  client.cpp  server.cpp
ex7 -GUI/ex7/cpp/src/cabs/: LuxuryCab.h  StandardCab.h  Vehicle.h
ex7 -GUI/ex7/cpp/src/core/: BFS.h  Matrix.cpp  Node.h  NodeMatrix.h  Point.cpp  Point.h
ex7 -GUI/ex7/cpp/src/creators/: TaxiCreator.cpp  TaxiCreator.h  ThreadCreator.cpp  TripCreator.cpp  TripCreator.h
ex7 -GUI/ex7/cpp/src/persons/: Driver.h
ex7 -GUI/ex7/cpp/src/sockets/: TcpClient.cpp  TcpServer.cpp
ex7 -GUI/ex7/java/: Manifest.mf  makefile
ex7 -GUI/ex7/java/src/: Controller.java  Main.java  TCPClient.java  gui.fxml  main.css
